# gtk-calculator

./: README.md  pyproject.toml
gtk-calculator/: gtk-calculator.cmb  layout.ui  main.py
