[tool.poetry]
name = "gtk-calculator"
version = "2022.01"
description = "Simple calculator built with GTK and Python"
authors = ["Dan Yeaw <dan@yeaw.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
